# src/routers/user.route.ts
@@ -6,7 +6,7 @@ import { UserService } from "../services/user.Sevice";
 
 export const userRouter = express.Router();
 userRouter.post(
-  "/signIn",
+  "/signup",
   userValidate,
   async (req: Request, res: Response, next: NextFunction) => {
     const controller = new UserController();
@@ -22,16 +22,34 @@ userRouter.post(
       res.status(500).json({
         message: "create User fail",
       });
-    }   
-  });
+    }
+  }
+);
 userRouter.get(
   "/verify",
   async (req: Request, res: Response, _next: NextFunction) => {
     try {
       const token = req.query.token as string;
       const userController = new UserController();
-      const user = await userController.getAll(token);
+      const user = await userController.verifyEmail(token);
       res.status(200).json({ user });
+    } catch (error) {
+      _next(error);
+    }
+  }
+);
+userRouter.post(
+  "/Login",
+  async (req: Request, res: Response, _next: NextFunction) => {
+    try {
+      const userController = new UserController();
+      const user = await userController.loginUser(req.body);
+      res
+        .json({
+          message: "login successfully ",
+          token: user.token,
+        })
+        .status(201);
     } catch (error) {
       _next(error);
     }
